--- a/CandleSticksChart/Modules/CurrencyList/CurrencyTableViewCell/CurrencyTableViewCell.xib
+++ b/CandleSticksChart/Modules/CurrencyList/CurrencyTableViewCell/CurrencyTableViewCell.xib
@@ -6,13 +6,12 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="91" id="KGk-i7-Jjw" customClass="CurrencyTableViewCell" customModule="CandleSticksChart" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="91" id="KGk-i7-Jjw" customClass="CurrencyTableViewCell" customModule="CandleSticksChart" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="422" height="91"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -34,38 +33,38 @@
                         </constraints>
                     </imageView>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LML-3A-kaf">
-                        <rect key="frame" x="16" y="90" width="390" height="1"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <rect key="frame" x="16" y="90.666666666666671" width="406" height="0.3333333333333286"/>
+                        <color key="backgroundColor" red="0.82745098039999998" green="0.82745098039999998" blue="0.82745098039999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="1" id="nXz-r8-0qa"/>
+                            <constraint firstAttribute="height" constant="0.5" id="nXz-r8-0qa"/>
                         </constraints>
                     </view>
                 </subviews>
                 <color key="backgroundColor" name="secondryColor"/>
                 <constraints>
-                    <constraint firstItem="LML-3A-kaf" firstAttribute="trailing" secondItem="WPm-ur-yYW" secondAttribute="trailing" id="2Yf-Fh-bAU"/>
                     <constraint firstAttribute="bottom" secondItem="LML-3A-kaf" secondAttribute="bottom" id="2vn-Uu-QMl"/>
                     <constraint firstItem="WPm-ur-yYW" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="8je-9e-tKt"/>
                     <constraint firstAttribute="trailing" secondItem="WPm-ur-yYW" secondAttribute="trailing" constant="16" id="GjE-f7-pgd"/>
                     <constraint firstItem="LML-3A-kaf" firstAttribute="leading" secondItem="Ew7-vu-lax" secondAttribute="leading" id="HFB-sg-urI"/>
                     <constraint firstItem="Ew7-vu-lax" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="agK-RG-O1q"/>
                     <constraint firstItem="Ew7-vu-lax" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="bHc-wE-coo"/>
+                    <constraint firstAttribute="trailing" secondItem="LML-3A-kaf" secondAttribute="trailing" id="j2U-iO-VBv"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="titleLabel" destination="Ew7-vu-lax" id="vYa-OZ-kH3"/>
+            </connections>
             <point key="canvasLocation" x="180" y="37.322274881516584"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="arrow" width="5" height="8.6666669845581055"/>
         <namedColor name="secondryColor">
-            <color red="0.19215686274509802" green="0.19215686274509802" blue="0.19215686274509802" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.19200000166893005" green="0.19200000166893005" blue="0.19200000166893005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="textColor">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
     </resources>
 </document>
